--- a/web/src/main/webapp/WEB-INF/resources/css/style.css
+++ b/web/src/main/webapp/WEB-INF/resources/css/style.css
@@ -6,3 +6,9 @@ body {
     padding-left: 70px;
     padding-right: 70px;
 }
+
+.login-body {
+
+    padding-left: 300px;
+    padding-right: 300px;
+}
