--- a/web/src/main/webapp/WEB-INF/resources/css/md-style.css
+++ b/web/src/main/webapp/WEB-INF/resources/css/md-style.css
@@ -4,12 +4,12 @@
     /*border: 0;*/
 /*}*/
 
-input, button, textarea {
-    margin: 0;
-    padding: 0;
-    font-size: 100%;
-    font-family: inherit;
-}
+/*input, button, textarea {*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*font-size: 100%;*/
+    /*font-family: inherit;*/
+/*}*/
 
 button {
     -moz-box-sizing: content-box;
@@ -37,9 +37,9 @@ table {
     font: inherit;
 }
 
-html {
-    overflow-y: scroll;
-}
+/*html {*/
+    /*overflow-y: scroll;*/
+/*}*/
 
 article, aside, header, footer, nav, section, figure, figcaption, hgroup, progress, canvas {
     display: block;
