[#30]: Rendering answer content

--- a/web/src/main/webapp/WEB-INF/resources/css/md-style.css
+++ b/web/src/main/webapp/WEB-INF/resources/css/md-style.css
@@ -11,6 +11,10 @@
     /*font-family: inherit;*/
 /*}*/
 
+a {
+    text-transform: none;
+}
+
 button {
     -moz-box-sizing: content-box;
     box-sizing: content-box;
