--- a/web/src/main/webapp/WEB-INF/resources/css/md-style.css
+++ b/web/src/main/webapp/WEB-INF/resources/css/md-style.css
@@ -11,23 +11,23 @@
     /*font-family: inherit;*/
 /*}*/
 
-a {
-    text-transform: none;
-}
+/*a {*/
+    /*text-transform: none;*/
+/*}*/
 
-button {
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-}
+/*button {*/
+    /*-moz-box-sizing: content-box;*/
+    /*box-sizing: content-box;*/
+/*}*/
 
-blockquote, q {
-    quotes: none;
-}
+/*blockquote, q {*/
+    /*quotes: none;*/
+/*}*/
 
-blockquote:before, blockquote:after, q:before, q:after {
-    content: '';
-    content: none;
-}
+/*blockquote:before, blockquote:after, q:before, q:after {*/
+    /*content: '';*/
+    /*content: none;*/
+/*}*/
 
 /*html {*/
     /*overflow-y: scroll;*/
@@ -53,18 +53,18 @@ blockquote:before, blockquote:after, q:before, q:after {
     -webkit-transition: .5s max-width ease-in 0;
 }
 
-a.book {
-    display: inline-block;
-    margin-left: -2px;
-    padding: 0 5px 5px 0;
-    background: url("https://a248.e.akamai.net/assets.github.com/images/modules/books/background-effect.gif?b404bb76") 0 0 no-repeat;
-}
-
-a.book > img {
-    width: 100px;
-    height: 130px;
-    box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1);
-}
+/*a.book {*/
+    /*display: inline-block;*/
+    /*margin-left: -2px;*/
+    /*padding: 0 5px 5px 0;*/
+    /*background: url("https://a248.e.akamai.net/assets.github.com/images/modules/books/background-effect.gif?b404bb76") 0 0 no-repeat;*/
+/*}*/
+/**/
+/*a.book > img {*/
+    /*width: 100px;*/
+    /*height: 130px;*/
+    /*box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1);*/
+/*}*/
 
 .callout {
     margin: 15px 0;
@@ -76,20 +76,20 @@ a.book > img {
     border-radius: 4px;
 }
 
-.callout strong {
-    font-weight: bold;
-    color: #000;
-}
-
-.callout h2 {
-    margin: 0;
-    font-size: 16px;
-    font-weight: 300;
-}
-
-.callout p:last-child {
-    margin-bottom: 0;
-}
+/*.callout strong {*/
+    /*font-weight: bold;*/
+    /*color: #000;*/
+/*}*/
+/**/
+/*.callout h2 {*/
+    /*margin: 0;*/
+    /*font-size: 16px;*/
+    /*font-weight: 300;*/
+/*}*/
+/**/
+/*.callout p:last-child {*/
+    /*margin-bottom: 0;*/
+/*}*/
 
 .callout hr {
     margin: 10px 0 10px -10px;
@@ -131,14 +131,14 @@ p.subdued {
     border-bottom: 1px solid #fff;
 }
 
-.featured-callout h2 {
-    margin: 0;
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 20px;
-    color: #000;
-}
-
+/*.featured-callout h2 {*/
+    /*margin: 0;*/
+    /*font-size: 14px;*/
+    /*font-weight: bold;*/
+    /*line-height: 20px;*/
+    /*color: #000;*/
+/*}*/
+/**/
 .featured-callout ol, .featured-callout ul {
     margin-left: 20px;
 }
@@ -220,13 +220,13 @@ p.subdued {
     margin-bottom: 0;
 }
 
-.help-callout h2 {
-    margin-top: 20px;
-}
-
-.help-callout h2:first-child {
-    margin: 0;
-}
+/*.help-callout h2 {*/
+    /*margin-top: 20px;*/
+/*}*/
+/**/
+/*.help-callout h2:first-child {*/
+    /*margin: 0;*/
+/*}*/
 
 .featured-callout .mega-icon {
     vertical-align: middle;
@@ -410,110 +410,110 @@ p.subdued {
     font-weight: bold;
 }
 
-dl.form {
-    margin: 15px 0;
-}
-
-dl.form > dt {
-    margin: 0 0 6px 0;
-}
-
-dl.form > dt > label {
-    position: relative;
-    font-size: 14px;
-    font-weight: bold;
-    color: #333;
-}
-
-dl.form > dd input[type=text], dl.form > dd input[type=password], dl.form > dd input[type=email] {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin-right: 5px;
-    width: 400px;
-    padding: 6px;
-    font-size: 14px;
-    color: #666;
-}
-
-dl.form > dd input[type=text].short, dl.form > dd input[type=password].short, dl.form > dd input[type=email].short {
-    width: 250px;
-}
-
-dl.form > dd input[type=text].long, dl.form > dd input[type=password].long, dl.form > dd input[type=email].long {
-    width: 100%;
-}
-
-dl.form > dd input[type=text].autocheck-loading, dl.form > dd input[type=password].autocheck-loading, dl.form > dd input[type=email].autocheck-loading {
-    background: url("https://a248.e.akamai.net/assets.github.com/images/spinners/octocat-spinner-16px.gif?a7b76cca") right center no-repeat;
-}
-
-dl.form > dd input[type=text].autocheck-successful, dl.form > dd input[type=password].autocheck-successful, dl.form > dd input[type=email].autocheck-successful {
-    background: url("https://a248.e.akamai.net/assets.github.com/images/modules/ajax/success.png?0d47d810") right center no-repeat;
-}
-
-dl.form > dd input[type=text].autocheck-errored, dl.form > dd input[type=password].autocheck-errored, dl.form > dd input[type=email].autocheck-errored {
-    background: url("https://a248.e.akamai.net/assets.github.com/images/modules/ajax/error.png?01d10868") right center no-repeat;
-}
-
-dl.form > dd textarea {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 5px;
-    height: 200px;
-    font-size: 12px;
-}
-
-dl.form > dd textarea.short {
-    height: 50px;
-}
-
-dl.form > dd p.note {
-    margin: 2px 0 5px 0;
-    font-size: 11px;
-    color: #666;
-}
-
-dl.form.required > dt > label:after {
-    content: "*";
-    color: #9f1006;
-    padding-left: 5px;
-}
-
-.form-checkbox {
-    margin: 15px 0;
-    padding-left: 20px;
-    vertical-align: middle;
-}
-
-.form-checkbox label {
-    font-size: 14px;
-    font-weight: bold;
-    color: #333;
-}
-
-.form-checkbox label em.highlight {
-    position: relative;
-    left: -4px;
-    padding: 2px 4px;
-    font-style: normal;
-    background: #fffbdc;
-    border-radius: 3px;
-}
-
-.form-checkbox input[type=checkbox], .form-checkbox input[type=radio] {
-    float: left;
-    margin: 2px 0 0 -20px;
-    vertical-align: middle;
-}
-
-.form-checkbox .note {
-    margin: 0;
-    display: block;
-    font-size: 12px;
-    font-weight: normal;
-    color: #666;
-}
+/*dl.form {*/
+    /*margin: 15px 0;*/
+/*}*/
+/**/
+/*dl.form > dt {*/
+    /*margin: 0 0 6px 0;*/
+/*}*/
+/**/
+/*dl.form > dt > label {*/
+    /*position: relative;*/
+    /*font-size: 14px;*/
+    /*font-weight: bold;*/
+    /*color: #333;*/
+/*}*/
+/**/
+/*dl.form > dd input[type=text], dl.form > dd input[type=password], dl.form > dd input[type=email] {*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+    /*margin-right: 5px;*/
+    /*width: 400px;*/
+    /*padding: 6px;*/
+    /*font-size: 14px;*/
+    /*color: #666;*/
+/*}*/
+/**/
+/*dl.form > dd input[type=text].short, dl.form > dd input[type=password].short, dl.form > dd input[type=email].short {*/
+    /*width: 250px;*/
+/*}*/
+/**/
+/*dl.form > dd input[type=text].long, dl.form > dd input[type=password].long, dl.form > dd input[type=email].long {*/
+    /*width: 100%;*/
+/*}*/
+/**/
+/*dl.form > dd input[type=text].autocheck-loading, dl.form > dd input[type=password].autocheck-loading, dl.form > dd input[type=email].autocheck-loading {*/
+    /*background: url("https://a248.e.akamai.net/assets.github.com/images/spinners/octocat-spinner-16px.gif?a7b76cca") right center no-repeat;*/
+/*}*/
+/**/
+/*dl.form > dd input[type=text].autocheck-successful, dl.form > dd input[type=password].autocheck-successful, dl.form > dd input[type=email].autocheck-successful {*/
+    /*background: url("https://a248.e.akamai.net/assets.github.com/images/modules/ajax/success.png?0d47d810") right center no-repeat;*/
+/*}*/
+/**/
+/*dl.form > dd input[type=text].autocheck-errored, dl.form > dd input[type=password].autocheck-errored, dl.form > dd input[type=email].autocheck-errored {*/
+    /*background: url("https://a248.e.akamai.net/assets.github.com/images/modules/ajax/error.png?01d10868") right center no-repeat;*/
+/*}*/
+/**/
+/*dl.form > dd textarea {*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+    /*width: 100%;*/
+    /*padding: 5px;*/
+    /*height: 200px;*/
+    /*font-size: 12px;*/
+/*}*/
+/**/
+/*dl.form > dd textarea.short {*/
+    /*height: 50px;*/
+/*}*/
+/**/
+/*dl.form > dd p.note {*/
+    /*margin: 2px 0 5px 0;*/
+    /*font-size: 11px;*/
+    /*color: #666;*/
+/*}*/
+/**/
+/*dl.form.required > dt > label:after {*/
+    /*content: "*";*/
+    /*color: #9f1006;*/
+    /*padding-left: 5px;*/
+/*}*/
+/**/
+/*.form-checkbox {*/
+    /*margin: 15px 0;*/
+    /*padding-left: 20px;*/
+    /*vertical-align: middle;*/
+/*}*/
+/**/
+/*.form-checkbox label {*/
+    /*font-size: 14px;*/
+    /*font-weight: bold;*/
+    /*color: #333;*/
+/*}*/
+/**/
+/*.form-checkbox label em.highlight {*/
+    /*position: relative;*/
+    /*left: -4px;*/
+    /*padding: 2px 4px;*/
+    /*font-style: normal;*/
+    /*background: #fffbdc;*/
+    /*border-radius: 3px;*/
+/*}*/
+/**/
+/*.form-checkbox input[type=checkbox], .form-checkbox input[type=radio] {*/
+    /*float: left;*/
+    /*margin: 2px 0 0 -20px;*/
+    /*vertical-align: middle;*/
+/*}*/
+/**/
+/*.form-checkbox .note {*/
+    /*margin: 0;*/
+    /*display: block;*/
+    /*font-size: 12px;*/
+    /*font-weight: normal;*/
+    /*color: #666;*/
+/*}*/
 
 .form-cards {
     margin: 0 0 10px 0;
@@ -7008,10 +7008,10 @@ p.recently-touched-branches-description {
     padding: 0 3px;
 }
 
-.form-actions .optional input {
-    position: relative;
-    top: -1px;
-}
+/*.form-actions .optional input {*/
+    /*position: relative;*/
+    /*top: -1px;*/
+/*}*/
 
 .form-warning {
     margin: 10px 0;
@@ -7106,19 +7106,19 @@ button.classy.personal-plan, a.button.classy.personal-plan {
     border-bottom-color: #438bb1;
 }
 
-button.classy.oauth, a.button.classy.oauth, .login_form form .submit_btn input {
-    color: #fff;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-    background: #4794bc;
-    background: -moz-linear-gradient(#4794bc, #3a7999);
-    background: -webkit-linear-gradient(#4794bc, #3a7999);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#4794bc',endColorstr='#3a7999')";
-    border-bottom-color: #438bb1;
-}
-
-.watch-button-container .watch-button, .watch-button-container.on .unwatch-button {
-    display: inline-block;
-}
+/*button.classy.oauth, a.button.classy.oauth, .login_form form .submit_btn input {*/
+    /*color: #fff;*/
+    /*text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);*/
+    /*background: #4794bc;*/
+    /*background: -moz-linear-gradient(#4794bc, #3a7999);*/
+    /*background: -webkit-linear-gradient(#4794bc, #3a7999);*/
+    /*-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#4794bc',endColorstr='#3a7999')";*/
+    /*border-bottom-color: #438bb1;*/
+/*}*/
+/**/
+/*.watch-button-container .watch-button, .watch-button-container.on .unwatch-button {*/
+    /*display: inline-block;*/
+/*}*/
 
 .watch-button-container.on .watch-button, .watch-button-container .unwatch-button {
     display: none;
@@ -7919,10 +7919,10 @@ button.classy.oauth, a.button.classy.oauth, .login_form form .submit_btn input {
     margin-top: 0;
 }
 
-.comment-form textarea, .comment .form-content textarea {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+/*.comment-form textarea, .comment .form-content textarea {*/
+    /*-moz-box-sizing: border-box;*/
+    /*box-sizing: border-box;*/
+/*}*/
 
 /*.comment .form-content textarea {*/
     /*margin: 0;*/
@@ -9334,10 +9334,10 @@ div.edu_contact_hidden p:first-child {
     width: 412px;
 }
 
-#contact-github textarea {
-    width: 400px;
-    height: 100px;
-}
+/*#contact-github textarea {*/
+    /*width: 400px;*/
+    /*height: 100px;*/
+/*}*/
 
 .heartocat {
     margin-left: 125px;
@@ -11400,11 +11400,11 @@ ol.download-list li:nth-child(2n) {
     color: #888;
 }
 
-.forgot_password_form form input.text, .forgot_password_form form textarea {
-    padding: 5px;
-    border: 1px solid #d8dee2;
-    margin: .2em 0 1em 0;
-}
+/*.forgot_password_form form input.text, .forgot_password_form form textarea {*/
+    /*padding: 5px;*/
+    /*border: 1px solid #d8dee2;*/
+    /*margin: .2em 0 1em 0;*/
+/*}*/
 
 .forgot_password_form form input.text {
     font-size: 110%;
@@ -11456,10 +11456,10 @@ ol.download-list li:nth-child(2n) {
     margin-bottom: 1em;
 }
 
-input[type=text].error, .forgot_password_form form label.error input.text, .forgot_password_form form label.error textarea {
-    border: 1px solid #a00;
-    background-color: #f2e1e1;
-}
+/*input[type=text].error, .forgot_password_form form label.error input.text, .forgot_password_form form label.error textarea {*/
+    /*border: 1px solid #a00;*/
+    /*background-color: #f2e1e1;*/
+/*}*/
 
 #header {
     background: #fafafa;
@@ -11612,17 +11612,17 @@ html.msie .topsearch {
     line-height: 16px;
 }
 
-.topsearch .search input {
-    float: left;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-top: 1px solid #cdcdcd;
-    box-shadow: 0 1px 0 #f1f1f1, inset 0 1px 1px #e0e0e0;
-    padding: 5px 5px 5px 25px;
-    color: #999;
-    font-size: 12px;
-    width: 155px;
-}
+/*.topsearch .search input {*/
+    /*float: left;*/
+    /*background-color: #fff;*/
+    /*border: 1px solid #ddd;*/
+    /*border-top: 1px solid #cdcdcd;*/
+    /*box-shadow: 0 1px 0 #f1f1f1, inset 0 1px 1px #e0e0e0;*/
+    /*padding: 5px 5px 5px 25px;*/
+    /*color: #999;*/
+    /*font-size: 12px;*/
+    /*width: 155px;*/
+/*}*/
 
 .topsearch .search input:active {
     color: #222;
@@ -11873,14 +11873,14 @@ html.msie .topsearch {
     display: none;
 }
 
-.enterprise .topsearch .search input {
-    border: 1px solid #000;
-    border-radius: 2px;
-    padding: 5px 8px;
-    -webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.12), inset 0 1px 1px #e0e0e0;
-    -moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.12), inset 0 1px 1px #e0e0e0;
-    box-shadow: 0 1px 1px rgba(255, 255, 255, 0.12), inset 0 1px 1px #e0e0e0;
-}
+/*.enterprise .topsearch .search input {*/
+    /*border: 1px solid #000;*/
+    /*border-radius: 2px;*/
+    /*padding: 5px 8px;*/
+    /*-webkit-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.12), inset 0 1px 1px #e0e0e0;*/
+    /*-moz-box-shadow: 0 1px 1px rgba(255, 255, 255, 0.12), inset 0 1px 1px #e0e0e0;*/
+    /*box-shadow: 0 1px 1px rgba(255, 255, 255, 0.12), inset 0 1px 1px #e0e0e0;*/
+/*}*/
 
 .enterprise .topsearch .advanced-search {
     opacity: .8;
@@ -12963,9 +12963,9 @@ a.signup-button:hover {
     border-radius: 2px;
 }
 
-.composer dl.form {
-    margin: 0;
-}
+/*.composer dl.form {*/
+    /*margin: 0;*/
+/*}*/
 
 .composer dl.form input[type=text].title {
     font-size: 20px;
@@ -13419,20 +13419,20 @@ ul.color-chooser label {
     cursor: pointer;
 }
 
-ul.color-chooser label .mini-icon-confirm, ul.color-chooser label input {
-    display: none;
-}
-
-ul.color-chooser .selected label .mini-icon-confirm {
-    margin-top: 2px;
-    margin-left: 6px;
-    display: inline-block;
-}
-
-.new-label input.namefield {
-    width: 208px;
-    padding: 3px 4px;
-}
+/*ul.color-chooser label .mini-icon-confirm, ul.color-chooser label input {*/
+    /*display: none;*/
+/*}*/
+/**/
+/*ul.color-chooser .selected label .mini-icon-confirm {*/
+    /*margin-top: 2px;*/
+    /*margin-left: 6px;*/
+    /*display: inline-block;*/
+/*}*/
+/**/
+/*.new-label input.namefield {*/
+    /*width: 208px;*/
+    /*padding: 3px 4px;*/
+/*}*/
 
 .new-label .form-actions {
     margin-top: 10px;
@@ -13728,11 +13728,11 @@ ol.list-tip li:last-child, ul.list-tip li:last-child {
     font-size: 90%;
 }
 
-.login_form form input.text, .login_form form textarea {
-    padding: 5px;
-    border: 1px solid #d8dee2;
-    margin: .2em 0 1em 0;
-}
+/*.login_form form input.text, .login_form form textarea {*/
+    /*padding: 5px;*/
+    /*border: 1px solid #d8dee2;*/
+    /*margin: .2em 0 1em 0;*/
+/*}*/
 
 .login_form form input.text {
     font-size: 110%;
